--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -54,6 +54,8 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="12dp"
             android:scaleType="centerCrop"
+            android:background="@drawable/rounded_image"
+            android:clipToOutline="true"
             android:contentDescription="Article Image" />
 
     </LinearLayout>
